# programming_notes

./: .gitignore
.github/workflows/: sync2gitee.yml
c_101/linux_c_beginning/: 10_struct.c  11_typedef.c  15_argc_argv.c  17_string_functions.c  18_char_pointrer_array_char.c  19_preprocessor.c  1_hello_world.c  20_unary.c  21_type_casting.c  22_malloc_free.c  23_creating_header_file.c  24_open_read_write.c  25_readdir_opendir.c  27_bubble_sort.c  28_recursion.c  29_pthread_complex.c  29_pthread_simple.c  2_int_and_char.c  32_qsort.c  3_float_double_and_longint.c  4_strings.c  5_pointer.c  6_array.c  7_array_pointers.c  8_function_pointer.c  addnum.c  addnum.h  logical_operators_output.c
c_101/udemy/: c_udemy.md
cmake_101/OLAS/: CMakeLists.txt  build.sh  configure.sh  run.sh  tutorial.md
cmake_101/OLAS/lib/adder/: adder.cpp
cmake_101/OLAS/src/: main.cpp
cpp_101/cpp_beginning/: 10_public_private_access_specifiers.cpp  11_methods.cpp  12_constructor.cpp  13_destructor.cpp  14_ofstream.cpp  15_ifstream_read_files.cpp  16_class_variables.cpp  17_static_members.cpp  18_init_array_objects.cpp  19_constructor_delegation.cpp  1_setup_in_vscode.cpp  20_pass_by_ref.cpp  21_object_assignment.cpp  22_deep_copy_constructor.cpp  23_function_overloading.cpp  24_stream_manipulator.cpp  25_setprecision_stream.cpp  26_operator_overloading.cpp  27_method_chaining.cpp  28_keyword_this.cpp  29_reference_variables.cpp  2_hello_world.cpp  30_member_initializer.cpp  31_inheritance.cpp  32_multilevel_inheritance.cpp  33_constructors_with_interitance.cpp  34_destructors_in_inheritance.cpp  35_multiple_inheritance_deep_dive.cpp  36_protected_class_members.cpp  37_base_class_access_specifiers.cpp  38_setbase_hex_and_octal_int.cpp  39_range_based_for_loop.cpp  3_cout.cpp  40_default_arguments.cpp  41_clear_input_buffer.cpp  42_convert_user_defined_class_to_primitive.cpp  43_ternary_operator_as_lavaue.cpp  44_swap_std_lib_func.cpp  45_polymorphism_with_virtual_keyword.cpp  46_virtual_destructors.cpp  (+31 more)
cpp_101/cpp_examples/: 10_replace_a_spcific_line_in_a_file.cpp  11_delete_a_specific_line_in_a_file.cpp  12_user_input_validation_with_a_do_while_loop.cpp  13_fizzbuzz_problem.cpp  14_check_if_an_integer_is_even_or_odd.cpp  15_find_the_sum_and_average_of_numbers_in_a_file.cpp  16_read_and_store_each_line_of_a_file_into_an_array_of_strings.cpp  17_read_and_store_all_file_lines_into_a_vector.cpp  18_count_the_lines_of_a_flie.cpp  19_create_a_menu_using_swtich_statement.cpp  1_add_two_numbers.cpp  20_rectangle_area_calculated_using_user_input_values.cpp  21_area_of_a_triangle.cpp  22_print_a_christmas_tree.cpp  2_check_if_a_string _is_a_palindrome.cpp  3_singleton_design_pattern.cpp  4_fibonacci_sequence.cpp  5_init_a_vector_with_user_input.cpp  numbers.txt  (+4 more)
data_structures/: data_structures.md
(+167 files in other folders)
